<resources>
    <string name="app_name">7MinutesWorkoutApp</string>
    <string name="start">START</string>
    <string name="start_image">Start Image</string>
    <string name="get_">GET READY FOR</string>
    <string name="_10">10</string>
    <string name="exercise">Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="upcoming_exercise">Upcoming Exercise :</string>
    <string name="_30">30</string>
    <string name="end">END</string>
    <string name="done">Done</string>
    <string name="_text">You have finished the workout.</string>
    <string name="finish">Finish</string>
    <string name="image">image</string>
    <string name="congratulations">Congratulations!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="weight_in_kg">Weight(in kg)</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">Calculate</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="height_in_feet">Feet</string>
    <string name="weight_in_pounds">Weight(in pounds)</string>
    <string name="history">History</string>
</resources>