<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".FinishActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_finish_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/tvEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/end"
        android:textColor="@color/colorAccent"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:background="@drawable/item_circular_color_accent_border"
        android:gravity="center">

        <!--Here the ic_action_done image in added in the drawables folders.-->
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/image"
            android:src="@android:drawable/ic_menu_more" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/congratulations"
        android:textColor="#212121"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_text"
        android:textColor="#212121"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnFinishActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="35dp"
        android:text="@string/finish"
        android:textSize="18sp" />

</LinearLayout>