<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/are_you_sure"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/tv_dialogTitle"
        android:textSize="22sp"
        />
    <TextView
        android:id="@+id/tv_dialogDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_dialogTitle"
        android:text="@string/this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit"
        android:textColor="#171616"
        android:textSize="15sp"
        android:layout_marginTop="2dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_dialogDesc"
        android:orientation="horizontal"
        android:gravity="clip_horizontal"
        >
        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/yes"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            />
        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/no"
            android:gravity="center"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>