<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_main_layout_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_myImageView"
        android:layout_width="match_parent"
        android:contentDescription="@string/start_image"
        android:src="@drawable/img_main_page"
        android:layout_height="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fl_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <FrameLayout
        android:id="@+id/fl_start"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/iv_myImageView"
        app:layout_constraintBottom_toTopOf="@id/fl_bmi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/item_color_accent_ripple_background"
    >
<!--        <Button-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:background="@drawable/circular_progress_gray"-->
<!--            android:layout_gravity="center"/>-->
<!--        <Button-->
<!--            android:layout_width="70dp"-->
<!--            android:layout_height="70dp"-->
<!--            android:background="@drawable/circular_progress_gray"-->
<!--            android:layout_gravity="center"/>-->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_bmi"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/item_circular_color_accent_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fl_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_start"
        >
<!--        android:id="@+id/fl_bmi"-->
<!--        android:layout_width="90dp"-->
<!--        android:layout_height="90dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/fl_start"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:gravity="center"-->
<!--        android:background="@drawable/item_circular_color_accent_background"-->
<!--        >-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            />
    </FrameLayout>
    <FrameLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fl_bmi"
        app:layout_constraintTop_toBottomOf="@id/fl_start"
        android:id="@+id/fl_history"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@drawable/item_circular_color_accent_background"
        android:gravity="center">
<!--        android:id="@+id/fl_history"-->
<!--        android:layout_width="90dp"-->
<!--        android:layout_height="90dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/fl_start"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@id/fl_bmi"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:background="@drawable/item_circular_color_accent_background"-->
<!--        >-->

        <ImageView
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@android:drawable/ic_menu_recent_history"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </FrameLayout>


    <TextView
        android:id="@+id/tv_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/fl_bmi"
        app:layout_constraintStart_toStartOf="@id/fl_bmi"
        app:layout_constraintEnd_toEndOf="@id/fl_bmi"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textColor="@color/colorAccent"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/fl_history"
        app:layout_constraintStart_toStartOf="@id/fl_history"
        app:layout_constraintEnd_toEndOf="@id/fl_history"/>
    />

</androidx.constraintlayout.widget.ConstraintLayout>