<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    tools:context=".ExerciseActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarExercise"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:background="@color/white"
        app:titleTextColor="@color/colorPrimary"
        android:theme="@style/toolbar_theme"
        android:layout_height="?android:attr/actionBarSize"/>
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fl_RestViewProgressBar"
        android:text="@string/get_"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorAccent"
        />
    <FrameLayout
        android:id="@+id/fl_RestViewProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarExercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_circular_color_accent_border"
        >
        <ProgressBar
            android:id="@+id/Progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="10"
            android:background="@drawable/circular_progress_gray"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:progress="100"
            android:rotation="-90"
            android:indeterminate="false"
            />
        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/item_circular_color_accent_background"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@string/_10"
            android:layout_gravity="center"
            android:textSize="@dimen/default_button_text_size"
            />

    </FrameLayout>
    <TextView
        android:id="@+id/tv_upcomingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fl_RestViewProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/upcoming_exercise"
        android:textSize="16sp"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible"
        android:textColor="#716F6F"/>
    <TextView
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/tv_upcomingExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_upcomingTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/exercise_name"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="#090808"/>


    <ImageView
        android:id="@+id/iv_exercise"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarExercise"
        app:layout_constraintBottom_toTopOf="@id/tv_exerciseName"
        android:visibility="invisible"
        android:scaleType="fitXY"
        android:src="@drawable/ic_jumping_jacks"
        />
    <TextView
        android:id="@+id/tv_exerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/exercise_name"
        android:textSize="@dimen/default_button_text_size"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />


    <FrameLayout
        android:id="@+id/flProgressBarExercise"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tv_exerciseName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rv_exerciseStatus"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_circular_color_accent_border"
        >
        <ProgressBar
            android:id="@+id/Progress_bar_exercise"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="30"
            android:background="@drawable/circular_progress_gray"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:progress="300"
            android:rotation="-90"
            android:indeterminate="false"
            />
        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/item_circular_color_accent_background"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/tv_timerExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@string/_30"
            android:layout_gravity="center"
            android:textSize="@dimen/default_button_text_size"
            />
    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_exerciseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flProgressBarExercise"
        />
</androidx.constraintlayout.widget.ConstraintLayout>